# 2024-1B-T08-EC06-G03

./: .README.md.swp  .gitignore  README.md  exec_bash.sh  package-lock.json
.github/workflows/: static.yml
docs/: docusaurus.config.js  package-lock.json  package.json
docs/docs/: index.md
docs/docs/Sprint 1/: _category_.json
docs/docs/Sprint 1/Arquitetura de Solucao/: Requisitos Funcionais.md  Requisitos Não Funcionais.md
docs/docs/Sprint 1/Design/: arquitetura_informacao.md  personas.md
docs/docs/Sprint 1/Negocios/: business_model_canvas.md  matriz_de_risco.md  placeholder.md
docs/docs/Sprint 2/: Metodologia.md  _category_.json  metodologia.md  testes.md  user-interface.md
docs/docs/Sprint 3/: Análise Financeira - POC.md  Análise Financeira - Solução Final.md  Análise Financeira.md  Visualização de Dados.md
docs/docs/Sprint 3/Revisão da arquitetura/: Back-End.md  Front-End.md  Robô.md  index.md
docs/docs/Sprint 4/: BackEnd.md  Banco de dados.md  Visão Computacional.md  back_end.md  banco_de_dados.md  execute_instruction.md
docs/docs/Sprint 4/Testes/: Requisitos Funcionais.md  Requisitos não funcionais.md
docs/docs/Sprint 5/: executa.md
docs/docs/Sprint-1/Arquitetura de Solucao/: requisitos-funcionais.md
docs/docs/Sprint-1/Arquitetura-de-Solucao/: _category_.json  arquitetura.md  requisitos-nao-funcionais.md
docs/docs/Sprint-1/Design/: _category_.json  arquitetura-informacao.md  personas.md
docs/docs/Sprint-1/Negocios/: _category_.json  (+2 more)
docs/docs/Sprint-2/: Metodologia.md  metodologia.md
docs/docs/Sprint-3/: _category_.json  analise-financeira-POC.md  analise-financeira-solucao-final.md  visualizacao-de-dados.md
docs/docs/Sprint-4/: _category_.json  back-end.md  banco-de-dados.md  execute-instruction.md  rosbridge.md  visao-computacional.md
docs/docs/Sprint-5/: _category_.json  arquitetura-final.md  como-que-bota.md  executa.md  frontend.md  rosbridge.md  visão-computacional-2.md
docs/static/img/: linear-angular.avif
src/backend/: .gitignore  package.json  server.js
src/backend/config/: default.json  express.js
src/backend/scripts/: createDatabase.sql
src/bolin/: build.sh  run.sh
src/bolin/src/: listener.py
src/bolin/src/bolin_camera_cpp/: CMakeLists.txt  README.md  package.xml
src/bolin/src/bolin_camera_cpp/include/bolin_camera_cpp/: bolin_camera_cpp.hpp
src/bolin/src/bolin_camera_cpp/src/: bolin_camera_cpp.cpp
src/bolin/src/bolin_lidar/: package.xml  setup.cfg  setup.py
src/bolin/src/bolin_lidar/bolin_lidar/: lidar.py
src/frontend/: .gitignore  bridge_test.html  index.html  package-lock.json  package.json
src/frontend/src/: App.css  App.tsx  main.tsx
src/model/: app.py  oloy.ipynb  oloy_train.ipynb  requirements.txt
src/workspace/: run.sh
src/workspace/install/: local_setup.sh  setup.sh
src/workspace/log/: latest_build
(+133 files in other folders)
